<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_background"
    tools:context=".screen.detail.DetailFragment">

    <ImageView
        android:id="@+id/ic_location"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/test_location"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_arrow_down"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintStart_toEndOf="@id/tv_location"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_notification"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_large"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_current_weather"
        android:layout_width="@dimen/image_weather_size"
        android:layout_height="@dimen/image_weather_size"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:src="@drawable/xxxsunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/display_size"
        android:layout_height="@dimen/display_size"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:background="@drawable/color_background_display_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_current_weather">

        <TextView
            android:id="@+id/tv_current_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/test_current_day"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_current_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/test_current_temperature"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_100"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_day" />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_72"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_current_temperature"
            app:layout_constraintTop_toBottomOf="@id/tv_current_day" />

        <TextView
            android:id="@+id/tv_current_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_current_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_temperature" />

        <ImageView
            android:id="@+id/ic_wind"
            android:layout_width="@dimen/icon_size_xlarge"
            android:layout_height="@dimen/icon_size_xlarge"
            android:layout_marginStart="@dimen/margin_medium_large"
            android:layout_marginTop="@dimen/margin_large"
            android:src="@drawable/wind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_micro"
            android:text="@string/wind_speed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/ic_wind"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_micro"
            android:text="@string/line"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/tv_wind_speed"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_current_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_micro"
            android:text="@string/test_current_wind_speed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/tv_line_1"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <TextView
            android:id="@+id/tv_wind_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_micro"
            android:text="@string/wind_speed_unit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/tv_current_wind_speed"
            app:layout_constraintTop_toBottomOf="@id/tv_current_text" />

        <ImageView
            android:id="@+id/ic_humidity"
            android:layout_width="@dimen/icon_size_xlarge"
            android:layout_height="@dimen/icon_size_xlarge"
            android:layout_marginStart="@dimen/margin_medium_large"
            android:layout_marginTop="@dimen/margin_large"
            android:src="@drawable/humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_wind" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_micro"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/ic_humidity"
            app:layout_constraintTop_toBottomOf="@id/ic_wind" />

        <TextView
            android:id="@+id/tv_line_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_micro"
            android:text="@string/line"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/tv_wind_speed"
            app:layout_constraintTop_toBottomOf="@id/ic_wind" />

        <TextView
            android:id="@+id/tv_current_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_micro"
            android:text="@string/test_current_humidity"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/tv_line_2"
            app:layout_constraintTop_toBottomOf="@id/ic_wind" />

        <TextView
            android:id="@+id/tv_humidity_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_micro"
            android:text="@string/humidity_unit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toEndOf="@id/tv_current_humidity"
            app:layout_constraintTop_toBottomOf="@id/ic_wind" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_forecast_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/white"
        android:drawableRight="@drawable/ic_arrow_up"
        android:text="@string/forecast_report"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
